# src/main/java/br/com/jonathanoliveira/currencyconverter/controllers/CurrencyConverterController.java
@@ -28,18 +28,20 @@ public class CurrencyConverterController {
 	private final CurrencyConverterFacade currencyConverterFacade;
 
 	@PostMapping(consumes = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<TransactionResponseVO> convertCurrency(@Valid @RequestBody TransactionRequestVO transactionRequestVO) {
-		TransactionResponseVO transactionResponseVO = this.currencyConverterFacade.convertCurrency(transactionRequestVO);
+	public ResponseEntity<TransactionResponseVO> convertCurrency(@RequestParam(value = "accessKey", required = true) String accesskey,
+			@Valid @RequestBody TransactionRequestVO transactionRequestVO) {
+		TransactionResponseVO transactionResponseVO = this.currencyConverterFacade.convertCurrency(accesskey,
+				transactionRequestVO);
 		return new ResponseEntity<>(transactionResponseVO, HttpStatus.CREATED);
 	}
 
 	@GetMapping(produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<List<TransactionResponseVO>> findAll(@RequestParam(value = "page", defaultValue = "0") int page,
+	public ResponseEntity<List<TransactionResponseVO>> findAll(
+			@RequestParam(value = "page", defaultValue = "0") int page,
 			@RequestParam(value = "size", defaultValue = "10") int size) {
 		Pageable pageable = PageRequest.of(page, size);
 		List<TransactionResponseVO> transactionResponseVOList = this.currencyConverterFacade.findAll(pageable);
 		return ResponseEntity.ok(transactionResponseVOList);
 	}
-
 
 }
